@@ -132,18 +132,31 @@ class _Pointer(_Type):
     """An object designating a Pointer property that links or multilinks
     to a node in a specified class."""
     def __init__(self, classname, do_journal='yes', try_id_parsing='yes',
-                 required=False, default_value=None):
+                 required=False, default_value=None,
+                 msg_header_property = None):
         """ Default is to journal link and unlink events.
             When try_id_parsing is false, we don't allow IDs in input
             fields (the key of the Link or Multilink property must be
             given instead). This is useful when the name of a property
             can be numeric. It will only work if the linked item has a
             key property and is a questionable feature for multilinks.
+            The msg_header_property is used in the mail gateway when
+            sending out messages: By default roundup creates headers of
+            the form: 'X-Roundup-issue-prop: value' for all properties
+            prop of issue that have a 'name' property. This definition
+            allows to override the 'name' property. A common use-case is
+            adding a mail-header with the assigned_to property to allow
+            user mail-filtering of issue-emails for which they're
+            responsible. In that case setting
+            'msg_header_property="username"' for the assigned_to
+            property will generated message headers of the form:
+            'X-Roundup-issue-assigned_to: joe_user'.
         """
         super(_Pointer, self).__init__(required, default_value)
         self.classname = classname
         self.do_journal = do_journal == 'yes'
-        self.try_id_parsing = try_id_parsing == 'yes'
+        self.try_id_parsing      = try_id_parsing == 'yes'
+        self.msg_header_property = msg_header_property
     def __repr__(self):
         """more useful for dumps. But beware: This is also used in schema
         storage in SQL backends!
